[gd_scene load_steps=3 format=3 uid="uid://cm5658k3ydu07"]

[ext_resource type="Script" path="res://Levels/split_screen.gd" id="1_oeqco"]
[ext_resource type="PackedScene" uid="uid://b5i1nvdyrs4ry" path="res://Levels/test_level.tscn" id="2_t6g5q"]

[node name="SplitScreen" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_oeqco")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 2

[node name="ViewPort" type="SubViewport" parent="SubViewportContainer"]
disable_3d = true
handle_input_locally = false
size = Vector2i(960, 540)
render_target_update_mode = 4

[node name="Level1" parent="SubViewportContainer/ViewPort" instance=ExtResource("2_t6g5q")]

[node name="Camera1" type="Camera2D" parent="SubViewportContainer/ViewPort"]
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
color = Color(0.161626, 2.08707e-05, 0.164733, 1)

[node name="SubViewportContainer2" type="SubViewportContainer" parent="."]
layout_mode = 2

[node name="ViewPort" type="SubViewport" parent="SubViewportContainer2"]
disable_3d = true
handle_input_locally = false
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="SubViewportContainer2/ViewPort"]
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="ColorRect2" type="ColorRect" parent="."]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
color = Color(0.161626, 2.08707e-05, 0.164733, 1)

[node name="SubViewportContainer3" type="SubViewportContainer" parent="."]
layout_mode = 2

[node name="ViewPort" type="SubViewport" parent="SubViewportContainer3"]
disable_3d = true
handle_input_locally = false
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="SubViewportContainer3/ViewPort"]
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[editable path="SubViewportContainer/ViewPort/Level1"]
